Remove gaps around nav, prevent shifting

--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,12 @@
   color-scheme: dark;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
+  margin: 0px;
   color: #cfcfcf;
   background-color: #191919;
 }
@@ -27,6 +32,11 @@ body {
 #topNav ul {
   background-color: #333;
   text-align: center;
+  position: sticky;
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
+  top: 0px;
 }
 
 #topNav ul li {
